--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/router": "^18.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "core-js": "2.4.1",
+    "es6-shim": "0.35.0",
+    "reflect-metadata": "0.1.9",
+    "systemjs": "0.19.6",
+    "ts-helpers": "1.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.4",
