--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,11 @@
                 "glob": "**/*",
                 "input": "resources/",
                 "output": "public/"
+              },
+              {
+                "glob": "*.bat",
+                "input": "scripts",
+                "output": "./"
               }
             ],
             "styles": [
